--- a/styles.css
+++ b/styles.css
@@ -318,3 +318,170 @@ body {
         display: none;
     }
 }
+
+/* Animation */
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.header .title-container {
+    opacity: 0;
+    animation: fade-in 1s ease-out forwards;
+    animation-delay: 1s;
+}
+
+.wine-title,
+.infos-container,
+.wine-infos,
+.timer-container {
+    opacity: 0;
+    animation: fade-in 1s ease-out forwards;
+}
+
+.wine-title {
+    animation-delay: 2s;
+}
+
+.wine-infos {
+    animation-delay: 3s;
+}
+
+.timer-container {
+    animation-delay: 4s;
+}
+
+.footer {
+    opacity: 0;
+    animation: fade-in 1s ease-out forwards;
+    animation-delay: 1s;
+}
+
+.shape-container .shape div {
+    opacity: 0;
+    animation: pop-up 0.5s ease-out forwards;
+}
+
+.shape-container .shape div:nth-child(1) {
+    animation-delay: 0.1s;
+}
+.shape-container .shape div:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.shape-container .shape div:nth-child(3) {
+    animation-delay: 0.3s;
+}
+.shape-container .shape div:nth-child(4) {
+    animation-delay: 0.4s;
+}
+.shape-container .shape div:nth-child(5) {
+    animation-delay: 0.5s;
+}
+.shape-container .shape div:nth-child(6) {
+    animation-delay: 0.6s;
+}
+.shape-container .shape div:nth-child(7) {
+    animation-delay: 0.7s;
+}
+.shape-container .shape div:nth-child(8) {
+    animation-delay: 0.8s;
+}
+.shape-container .shape div:nth-child(9) {
+    animation-delay: 0.9s;
+}
+.shape-container .shape div:nth-child(10) {
+    animation-delay: 1.0s;
+}
+
+@keyframes pop-up {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.shape-container .shape div {
+    animation: pop-up 0.5s ease-out forwards;
+    opacity: 0; /* Start hidden */
+}
+
+.shape-container .shape div:nth-child(1) {
+    animation-delay: 0.1s;
+}
+.shape-container .shape div:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.shape-container .shape div:nth-child(3) {
+    animation-delay: 0.3s;
+}
+.shape-container .shape div:nth-child(4) {
+    animation-delay: 0.4s;
+}
+.shape-container .shape div:nth-child(5) {
+    animation-delay: 0.5s;
+}
+.shape-container .shape div:nth-child(6) {
+    animation-delay: 0.6s;
+}
+.shape-container .shape div:nth-child(7) {
+    animation-delay: 0.7s;
+}
+.shape-container .shape div:nth-child(8) {
+    animation-delay: 0.8s;
+}
+.shape-container .shape div:nth-child(9) {
+    animation-delay: 0.9s;
+}
+.shape-container .shape div:nth-child(10) {
+    animation-delay: 1.0s;
+}
+.shape-container .shape div:nth-child(11) {
+    animation-delay: 1.1s;
+}
+.shape-container .shape div:nth-child(12) {
+    animation-delay: 1.2s;
+}
+.shape-container .shape div:nth-child(13) {
+    animation-delay: 1.3s;
+}
+.shape-container .shape div:nth-child(14) {
+    animation-delay: 1.4s;
+}
+.shape-container .shape div:nth-child(15) {
+    animation-delay: 1.5s;
+}
+.shape-container .shape div:nth-child(16) {
+    animation-delay: 1.6s;
+}
+.shape-container .shape div:nth-child(17) {
+    animation-delay: 1.7s;
+}
+.shape-container .shape div:nth-child(18) {
+    animation-delay: 1.8s;
+}
+.shape-container .shape div:nth-child(19) {
+    animation-delay: 1.9s;
+}
+.shape-container .shape div:nth-child(20) {
+    animation-delay: 2.0s;
+}
+.shape-container .shape div:nth-child(21) {
+    animation-delay: 2.1s;
+}
+.shape-container .shape div:nth-child(22) {
+    animation-delay: 2.2s;
+}
+.shape-container .shape div:nth-child(23) {
+    animation-delay: 2.3s;
+}
+.shape-container .shape div:nth-child(24) {
+    animation-delay: 2.4s;
+}
