--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,19 @@ body {
     position: fixed;
     bottom: 0;
 }
+
+.footer a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.footer a:visited {
+    text-decoration: none;
+}
 /* Fin du style du footer */
 
 /* Shape */
